--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
-    "use-context-selector": "^1.4.1",
-    "uuidv4": "^6.2.13"
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
